# ChangeLog for sys-block/partitionmanager
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/partitionmanager/ChangeLog,v 1.23 2013/07/31 20:01:20 kensington Exp $

  31 Jul 2013; Michael Palimaka <kensington@gentoo.org>
  -partitionmanager-1.0.3_p20120804.ebuild:
  Remove old.

  29 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  partitionmanager-1.0.3_p20130623.ebuild:
  Stable for x86, wrt bug #477634

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org>
  partitionmanager-1.0.3_p20130623.ebuild:
  Stable for amd64, wrt bug #477634

*partitionmanager-1.0.3_p20130623 (23 Jun 2013)

  23 Jun 2013; Johannes Huber <johu@gentoo.org>
  +partitionmanager-1.0.3_p20130623.ebuild:
  New snapshot including udisks2 support, fixes bug #473326.

  07 Sep 2012; Johannes Huber <johu@gentoo.org>
  -partitionmanager-1.0.3_p20110912.ebuild:
  Remove old.

  07 Sep 2012; Johannes Huber <johu@gentoo.org>
  partitionmanager-1.0.3_p20120804.ebuild:
  Stable for x86, wrt bug #434006

  07 Sep 2012; Agostino Sarubbo <ago@gentoo.org>
  partitionmanager-1.0.3_p20120804.ebuild:
  Stable for amd64, wrt bug #434006

*partitionmanager-1.0.3_p20120804 (04 Aug 2012)

  04 Aug 2012; Michael Palimaka <kensington@gentoo.org>
  +partitionmanager-1.0.3_p20120804.ebuild:
  Add new snapshot. Fixes bug #427878.

  15 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  -partitionmanager-1.0.3.ebuild:
  old

  15 Oct 2011; Markus Meier <maekke@gentoo.org>
  partitionmanager-1.0.3_p20110912.ebuild:
  x86 stable, bug #385225

  04 Oct 2011; Tony Vroon <chainsaw@gentoo.org>
  partitionmanager-1.0.3_p20110912.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo,
  Elijah "Armageddon" El Lazkani & Tomáš "Mepho" Pružina in bug #385225.

  28 Sep 2011; Samuli Suominen <ssuominen@gentoo.org>
  partitionmanager-1.0.3_p20110912.ebuild:
  Use gentoo mirrors.

*partitionmanager-1.0.3_p20110912 (12 Sep 2011)
