@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
+DEPEND=dev-libs/libatasmart >=sys-block/parted-3 sys-apps/util-linux sys-devel/gettext >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=]
+DESCRIPTION=KDE utility for management of partitions and file systems
+EAPI=5
+HOMEPAGE=http://partitionman.sourceforge.net/
+IUSE=debug linguas_ar linguas_bg linguas_bs linguas_ca linguas_ca@valencia linguas_cs linguas_da linguas_de linguas_el linguas_en_GB linguas_es linguas_et linguas_fr linguas_gl linguas_it linguas_lt linguas_nb linguas_nds linguas_nl linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sl linguas_sr linguas_sr@ijekavian linguas_sr@ijekavianlatin linguas_sr@latin linguas_sv linguas_tr linguas_uk linguas_zh_CN linguas_zh_TW +handbook aqua
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/libatasmart >=sys-block/parted-3 sys-apps/util-linux >=kde-base/oxygen-icons-4.4:4[aqua=] linguas_ar? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ar(+)] ) linguas_bg? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_bg(+)] ) linguas_bs? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_bs(+)] ) linguas_ca? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ca(+)] ) linguas_ca@valencia? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ca@valencia(+)] ) linguas_cs? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_cs(+)] ) linguas_da? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_da(+)] ) linguas_de? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_de(+)] ) linguas_el? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_el(+)] ) linguas_en_GB? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_en_GB(+)] ) linguas_es? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_es(+)] ) linguas_et? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_et(+)] ) linguas_fr? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_fr(+)] ) linguas_gl? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_gl(+)] ) linguas_it? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_it(+)] ) linguas_lt? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_lt(+)] ) linguas_nb? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nb(+)] ) linguas_nds? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nds(+)] ) linguas_nl? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_nl(+)] ) linguas_pa? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pa(+)] ) linguas_pl? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pl(+)] ) linguas_pt? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pt(+)] ) linguas_pt_BR? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_pt_BR(+)] ) linguas_ro? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ro(+)] ) linguas_ru? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_ru(+)] ) linguas_sk? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sk(+)] ) linguas_sl? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sl(+)] ) linguas_sr? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sr(+)] ) linguas_sr@ijekavian? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sr@ijekavian(+)] ) linguas_sr@ijekavianlatin? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sr@ijekavianlatin(+)] ) linguas_sr@latin? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sr@latin(+)] ) linguas_sv? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_sv(+)] ) linguas_tr? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_tr(+)] ) linguas_uk? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_uk(+)] ) linguas_zh_CN? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_zh_CN(+)] ) linguas_zh_TW? ( >=kde-base/kde-l10n-4.4:4[aqua=,linguas_zh_TW(+)] ) handbook? ( >=kde-base/kdelibs-4.4:4[aqua=,handbook] ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=]
+SLOT=0
+SRC_URI=mirror://kde/stable/partitionmanager/1.1.0/src/partitionmanager-1.1.0.tar.xz
+_eclasses_=cmake-utils	10b6a99f9058ac1b830d00b3421f04e4	eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	e47a7aa065241312b0ea660fce20ee26	kde4-functions	ae35a236818dc6d805541db6a658e58b	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=6b8145882b3bda76712589c0230826bf
