@@ -2,17 +2,25 @@
 Hash: SHA256
 
 DIST partitionmanager-1.0.3_p20130623.tar.xz 209320 SHA256 257c30ed05f7ff542cddaab3652b99ae227cf84af5ad2b05fad31e635db851dd SHA512 be1253bc952dcdf6c8d19443b77662501d40cd7c61704e77ef9e7766fa639d2f433918c9093278ce24313904a53ffeb488dfd0b68ae67550ef5783ff462da54a WHIRLPOOL 295c48e51312ca4dd92b0711ca51606eb3fac34526b42a4437d768db28f1a9d838cb7ddb73e83ae63a242246a21f4c10fc344efcee3ecdca1d1ff474386ff908
+DIST partitionmanager-1.1.0.tar.xz 1747260 SHA256 30ac75f85bb61e6ec9b6f5d80dee4a2c8501a0a0c62997f6d734e63459802cc8 SHA512 9e35777ae54f46ea585fd7ea7295c63531bca0a9bd53bf967f1e58219a63bb3c8d198785a9f5c7ddde6ae93f40b7be04ecf16598065b775e8e013686db7be6be WHIRLPOOL 86e426c741719d8c48e39d1567f6aa2664ae7e5ad5982793d348adb675c6e779bff8873e2ed3af088712a45e930713ef54e963f5c61eb7b3101ce14978cc96a2
 EBUILD partitionmanager-1.0.3_p20130623.ebuild 760 SHA256 b53eef2613d1d893a1e47afa3c9188938133864a73acd7aff8cba71e9c967d0c SHA512 060d9c1dc721a2897a0d48798fc39f7861d1c2d181b2c1faab41f012d1cb70bec91078e2460bf258773e0cb9d6c76b7ce91d74d71f264b937dd66e6d881dad35 WHIRLPOOL f202d5b1b64551b1635d8028afb2b97666c4a23ede7485d91b73cdbf09608f6e922096569c7fc957137853826adea12ecf94b04541acffd59263dbbeab225a7e
-MISC ChangeLog 3633 SHA256 00772214b59398099d87f546d040b1d26ca20087ca309d4e973845caa05e1389 SHA512 6ec40eb9ac76d476cfd7f3b493de2e09d2ddf51dfaa5d8c336e5bf180c10c6a1ffe64325bd39e9135fe3ebcca65c4a2680be3d5823562b36ffbf8c92d322e8bc WHIRLPOOL 9fafab66f200a1d1254ca7d4c64fdc34df1cc9e5528d288b538914eec45c4ebe403fa714e8d5442851f619959f8e2433dbfc35a21c94191b3ac7417612a277e4
+EBUILD partitionmanager-1.1.0.ebuild 914 SHA256 e558c732fefd5c432af31c40402384dd08208e1566f31c8ca2a509b5844f242b SHA512 51558e834f746a66008d135471ea771fbc462f07191616736aa7843d066fd7d977b84c6d44b03a7de698c803ad884a7dada229954198faebc611e512222ce26e WHIRLPOOL 5b386cc83a8d62e01138c9fe58f0c53d1ffee1b6c24cd916362c3d41a224e3419acff4b462f0b82ddc95bf8ccf85e84ba50141d98de36b5b7d8f8e70e1e4459e
+MISC ChangeLog 3776 SHA256 7cf991b10cd653164052e0e37f6f4d60f39dc6137294bd8b002e20a8aa59b943 SHA512 31a4b79b5a525a1ec99a43b58fd81dafc0052050c9d911b5941ed5e65cc2e036fb9152bb8a29ff917dfe306b5b1783bc4f3f85e876cf1ab93dcf586dd1769403 WHIRLPOOL cbe14367948207f640c09ef373859c49df9b3e46cc3fcfdc1876a140c2b9ee3a187ffa9a80f0d4e4342c587b66b1759c6106c614c53ac03e5d79b63d99c7c2be
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJR+WyTAAoJEMbwO6tnXQ0saw8IAI/rTgZb7iOKUTjfbJ3dF4j0
-2y4mXEaSvwoz+tRCZQi4xVyQYjrj+iGXNxxDM43UXIerGGF/H7rGrE1JQqS83MMf
-3pBj5vozCYXDOJqgejaEsWk0HuLzWT+MWhkLCYuQCZw4digtdrK0oE8mXdon7Yzi
-87tWzGbxgn34T+yQ9jRgp0lHlX9sQ2+HMt+DPsLTJncLEqWd80awYZyCbUP99tNu
-E76Zs43RAe7sn+tEJPXmpkagr8/yxjKIBYc+N2ipXOzqeJHb7ke+RMnVkGJiVE8L
-BNIIo27WlPn6bABQzgXdW8Y6abyCuQ6Bkee0AI98O0u0T9cHRudpxe1NrYrlRaw=
-=m4bf
+iQIcBAEBCAAGBQJTwnsWAAoJEGVpnaTzz9K9hswP/21nzKD/KaoPBbh/SXUlrsdh
+V05mtCMH2Tw07A5ZWOVnvB+25ZQU5JDn2G8EwzXl75eckg46S1kjmAZJQFhRULDy
+FRQ3U4TveCyGZvWn5BTLf5BJbAtMO26P+b+JYzPBj1ohI1VxKuPnJ4tHK5Y+hDaL
+LDtkObNv1M2MIvxEAlNGF78p0L4Kmd1mV5aQnQV4N9D0W2l+H0oZzNG9YqKUF0iU
+J/+8WiCNSAhUZi3DfVJpiAAoqgla9bpFlp17rfQC4KHLB6QB1gtW3n4Kwcea2HPn
+q3I+IYDLTrlrq9wFMa10MlW8iDdfmghzxuUip3FORHjOfRR/heezALmxXwK2Ryxi
+PUA1Lu0/74r70SpUskMcjkHZFB86b4+NEMfsrBqNUfDT5lfpEsw/XnfQbNzgDgq+
+MC5nMQ8DGClOrAc+YOSxW8dqmZ4BEVEzSWpL8HAEwUIE/5bUigz2/LF6sLEE+mBj
+/yeJflj289e2uamt5qmDK3CJc2ac+nap5nrSnNHbYV2YfoQWM3wErOERcJFNK17J
+3PiNMpGgSKc0+ORmMOA5d/0Ka9qQ9DldA9h/tOIWpgxZOZ3jVOeQ1qIyOKZxH7h2
+yoAcWt927xsPuGHEDmyg2ZMznG98cflgyFqIKYTHZF1NzXn8mYdVbGfVc5pbbr37
+igiX86i8UslKdFrfgUsM
+=LrGt
 -----END PGP SIGNATURE-----
