@@ -1,6 +1,11 @@
 # ChangeLog for sys-block/partitionmanager
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/partitionmanager/ChangeLog,v 1.23 2013/07/31 20:01:20 kensington Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-block/partitionmanager/ChangeLog,v 1.24 2014/07/13 12:26:58 johu Exp $
+
+*partitionmanager-1.1.0 (13 Jul 2014)
+
+  13 Jul 2014; Johannes Huber <johu@gentoo.org> +partitionmanager-1.1.0.ebuild:
+  Version bump, bug #516948.
 
   31 Jul 2013; Michael Palimaka <kensington@gentoo.org>
   -partitionmanager-1.0.3_p20120804.ebuild:
